--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-typed": "^2.0.12",
-    "react-typical": "^0.1.3"
+    "react-typical": "^0.1.3",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
