--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-typed": "^2.0.12",
     "react-typical": "^0.1.3",
     "web-vitals": "^4.2.4"
